Fix my subreddits drop down, fix dye flair alignment

--- a/_flair.scss
+++ b/_flair.scss
@@ -277,6 +277,7 @@
 	display: inline-block;
 	padding-left: 20px;
 	height: 20px;
+	vertical-align: middle;
 }
 
 .flair-tanner + .userattrs:before {background-position: 0px 0px;}
