--- a/_header.scss
+++ b/_header.scss
@@ -220,6 +220,6 @@
 	text-decoration: none;
 }
 
-#header a.choice, #viewImagesButton {
+#header .tabmenu a.choice, #viewImagesButton {
 	display: inline-block;
 }
